src/test/ui/issues/issue-3344.stderr
error[E0046]: not all trait items implemented, missing: `partial_cmp`
  --> $DIR/issue-3344.rs:3:1
   |
LL | impl PartialOrd for Thing {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^ missing `partial_cmp` in implementation
   |
   = help: implement the missing item: `fn partial_cmp(&self, _: &Rhs Ref(ReLateBound(DebruijnIndex(0), BrAnon(1)), Rhs, Not)) -> std::option::Option<std::cmp::Ordering> { todo!() }`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0046`.
